--- a/src/components/Profile/Profileinfo/ProfileInfo.module.css
+++ b/src/components/Profile/Profileinfo/ProfileInfo.module.css
@@ -1,3 +1,17 @@
 .descriptionBlock {
     padding: 10px;
 }
+
+.mainPhoto {
+    max-width: 200px;
+}
+
+.contact {
+    padding-left: 10px;
+}
+
+.formSummaryError {
+    border: red 1px solid;
+    padding: 5px;
+    color: red;
+}
